--- a/src/app/tsconfig.json
+++ b/src/app/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "allowJs": true
   },
   "exclude": [
     "node_modules"
