--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.7",
@@ -24,9 +25,11 @@
     "@angular/router": "^6.1.0",
     "angular-bootstrap-md": "^7.3.0",
     "angular2-swiper": "^0.8.1",
+    "angularfire2": "^5.0.0-rc.9",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "firebase": "^4.13.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
