--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ng-snotify": "^4.3.1",
     "ngx-hm-carousel": "^1.6.4",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
