--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angular-bootstrap-md": "^7.3.0",
+    "angular-calendar": "^0.26.6",
     "angular2-swiper": "^0.8.1",
     "angularfire2": "^5.0.0-rc.9",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
     "firebase": "^4.13.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -49,7 +51,7 @@
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -59,6 +61,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "raw-loader": "^1.0.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
