--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.6",
+    "@angular/animations": "^7.2.4",
     "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngx-gallery/core": "^4.0.2-beta.0",
     "angular-bootstrap-md": "^7.3.0",
     "angular-calendar": "^0.26.6",
     "angular2-swiper": "^0.8.1",
