--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ng-snotify": "^4.3.1",
+    "ngx-gallery": "^5.9.1",
     "ngx-hm-carousel": "^1.6.4",
     "ngx-loading": "^2.0.1",
     "popper.js": "^1.14.4",
