--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/scss/font-awesome.scss",
               "./node_modules/angular-bootstrap-md/scss/bootstrap/bootstrap.scss",
-              "./node_modules/angular-bootstrap-md/scss/mdb-free.scss"
-
+              "./node_modules/angular-bootstrap-md/scss/mdb-free.scss",
+              "./node_modules/aos/dist/aos.css"
+             
 
             ],
             "scripts": [
@@ -36,7 +37,8 @@
               "./node_modules/popper.js/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "./node_modules/chart.js/dist/Chart.js",
-              "./node_modules/hammerjs/hammer.min.js"
+              "./node_modules/hammerjs/hammer.min.js",
+              "./node_modules/aos/dist/aos.js"
 
             ]
           },
