--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-calendar": "^0.26.6",
     "angular2-swiper": "^0.8.1",
     "angularfire2": "^5.0.0-rc.9",
+    "aos": "^2.3.4",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
