--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "mdbootstrap": "^4.7.3",
     "ng-snotify": "^4.3.1",
     "ngx-gallery": "^5.9.1",
     "ngx-hm-carousel": "^1.6.4",
     "ngx-loading": "^2.0.1",
+    "node-sass": "^4.11.0",
     "popper.js": "^1.14.4",
     "rxjs": "^6.0.0",
     "sweetalert": "^2.1.2",
